{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 26,
  "lineage": "8d193f78-dfb9-194d-f7c2-aaeda94349ca",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.107.228.0",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-25T06:22:24.979-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/portfolio-website-464012/global/addresses/static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "static-ip",
            "prefix_length": 0,
            "project": "portfolio-website-464012",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/addresses/static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 3048334822154323652,
            "id": "projects/portfolio-website-464012/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.107.228.0",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "portfolio-website-464012",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.static_ip",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 155130077157672660,
            "id": "projects/portfolio-website-464012/global/forwardingRules/https-forwarding-rule",
            "ip_address": "34.107.228.0",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "portfolio-website-464012",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/forwardingRules/https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/targetHttpsProxies/https-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.static_backend",
            "google_compute_global_address.static_ip",
            "google_compute_managed_ssl_certificate.ssl_cert",
            "google_compute_target_https_proxy.https_proxy",
            "google_compute_url_map.lb_url_map",
            "google_storage_bucket.resume_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T06:22:38.717-07:00",
            "fingerprint": "aytox-pGEkI=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/portfolio-website-464012/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "portfolio-website-464012",
            "proxy_bind": false,
            "proxy_id": 3104134599177291505,
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/urlMaps/http-redirect-map"
          },
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T06:22:53.922-07:00",
            "fingerprint": "cJVpHqP1z1A=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/portfolio-website-464012/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "portfolio-website-464012",
            "proxy_bind": false,
            "proxy_id": 5946871378206934722,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/sslCertificates/ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/urlMaps/static-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.static_backend",
            "google_compute_managed_ssl_certificate.ssl_cert",
            "google_compute_url_map.lb_url_map",
            "google_storage_bucket.resume_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T06:22:24.994-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "klc-Fo2eTc8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/portfolio-website-464012/global/urlMaps/http-redirect-map",
            "map_id": 2061335828406617855,
            "name": "http-redirect-map",
            "path_matcher": [],
            "project": "portfolio-website-464012",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/urlMaps/http-redirect-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T06:22:41.313-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/backendBuckets/static-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "xDmVkagTDNk=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/portfolio-website-464012/global/urlMaps/static-url-map",
            "map_id": 3010327995127056078,
            "name": "static-url-map",
            "path_matcher": [],
            "project": "portfolio-website-464012",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-website-464012/global/urlMaps/static-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.static_backend",
            "google_storage_bucket.resume_site"
          ]
        }
      ]
    }
  ]
}